@@ -1,3 +1,14 @@
+2002-06-11  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* CompletionTargetPlugin.java: 
+	* CompletionSourcePlugin.java: 
+	* CompletionSocietyPlugin.java: 
+	* CompletionRelay.java: 
+	* CompletionPlugin.java: 
+	* CompletionNodePlugin.java:
+	Add final completion action to "persistNow" after advancement is
+	complete.
+
 2002-05-28  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* CompletionTargetPlugin.java:
